Fixed overflow bug

--- a/resources/styles/backdrop.css
+++ b/resources/styles/backdrop.css
@@ -93,6 +93,7 @@
   height: 20%;
   width: 100%;
   z-index: 1;
+  overflow: hidden;
 }
 
 #water canvas {
@@ -257,6 +258,22 @@
 
 .projectInfo {
   color: #fff;
+
+}
+
+.projectContent::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+.projectContent::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+    border-radius: 10px;
+}
+ 
+.projectContent::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: rgba(0,0,0, 0.4);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
 
 .projectContent {
